# mlops-demo

./: LICENSE  README.md  metadata.yaml  pyproject.toml
.dvc/: config
.github/workflows/: test_on_push.yaml  train_evaluate.yaml
data/: README.md
models/: README.md
notebooks/: README.md
results/: README.md  metrics.json
src/: preprocess_data.py  train.py
src/scripts/: README.md
src/tests/: README.md
src/tests/preprocess/: test_preprocess.py
src/tests/preprocess/test_data/: testWeatherAUS.csv
