[tool.poetry]
authors = ["Lucas Melin <lucas.melin@gmail.com>"]
description = "Demo of how to setup MLOps pipeline"
license = "MIT"
name = "mlops-demo"
version = "0.1.0"

[tool.poetry.dependencies]
PyYAML = "^6.0"
dvc = {extras = ["all"], version = "^2.9.5"}
joblib = "^1.1.0"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
pandas = "^1.4.1"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-dependency = "^0.5.1"
python = "^3.9"
scikit-learn = ">=0.23"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
